--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
         <ul>
           <li><a href="https://github.com/nsafter">Github</a></li>
           <li><a href="https://www.linkedin.com/in/nsafter/">LinkedIn</a></li>
-          <li>Phone: +91 7888393319</li>
           <li>
             Primary E-mail:
             <a href="mailto:nandini1951.be20@chitkara.edu.in"
@@ -144,7 +143,7 @@
           </li>
           <li>
             Secondary E-mail:
-            <a href="mailto:nsharma63205@gmail.com">nsharma63205@gmail.com</a>
+            <a href="mailto:nsafter2002@gmail.com">nsafter2002@gmail.com</a>
           </li>
         </ul>
       </div>
